# ACPFTestProject

./: .gitignore  .gitmodules  README.md  atestpush.bat  conanfile.py  ctestpush.bat  editAll.bat  pushAll.bat  testpush.bat  update.bat  updateTags.bat
Sources/: .clang-format  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  DoxygenConfig.txt  README.md  cpfOwnedPackages.cmake  packages.cmake
Sources/CIBuildConfigurations/: Clang-static-release.config.cmake  Gcc-shared-debug.config.cmake  VS2017-shared.config.cmake  VS2017-static.config.cmake  cpfCIBuildConfigurations.json
Sources/CPackage/: .gitignore  CMakeLists.txt  CPFPackageDependencyRequirements.cmake  README.md  c.cpp  c.h  function.cpp  function.h
Sources/CPackage/Tests/: function_fixture.cpp  function_fixture.h  function_tests.cpp  tests_main.cpp
Sources/cmake/: CMakeLists.txt
Sources/cmake/Hunter/: config.cmake
Sources/documentation/: ACPFTestProjectDocs.dox  CMakeLists.txt  DoxygenConfig.txt
